--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
       </li>
       <li>
-        <a href="recipes/chololate-chip-cookies" target="_blank">Chololate Chip Cookies</a>
+        <a href="recipes/chololate-chip-cookies.html" target="_blank">Chololate Chip Cookies</a>
       </li>
       <li>
-        <a href="recipes/smores" target="_blank">Smores</a>
+        <a href="recipes/smores.html" target="_blank">Smores</a>
       </li>
     </ul>
   </body>
