Finished 2 recipe pages, g2g for now

--- a/recipes/chololate-chip-cookies.html
+++ b/recipes/chololate-chip-cookies.html
@@ -6,5 +6,42 @@
   </head>
   <body>
     <h1>Chocolate Chip Cookies Recipe</h1>
+    <img
+      src="../img/chocolate-chip-cookie.jpeg"
+      alt="Chocolate Chip Cookie"
+      width="250"
+      height="250"
+    />
+    <h3>Description</h3>
+    <p>
+      Best Chocolate Chip Cookies Recipe: These cookies are beloved for their
+      soft, chewy texture and irresistible flavor.
+    </p>
+    <p>Here’s how you can make them:</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Butter</li>
+      <li>Eggs</li>
+      <li>Vanilla</li>
+      <li>Baking Soda</li>
+      <li>Water</li>
+      <li>Salt</li>
+      <li>Flour</li>
+      <li>Chocolate chips</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+      <li>Beat the butter and sugars, then add eggs and vanilla.</li>
+      <li>Dissolbe baking soda in hot water and add it to the mixture.</li>
+      <li>Stir in flour and chocolate chips.</li>
+      <li>Drop Dough onto a prepared baking sheet.</li>
+      <li>
+        Bake at 350 f (180 c) for about 10 minutes until the edges are golden
+        brown.
+      </li>
+      <li>Remove from oven, allow to cool.</li>
+      <li>Enjoy!</li>
+    </ol>
   </body>
 </html>
