--- a/recipes/smores.html
+++ b/recipes/smores.html
@@ -6,5 +6,56 @@
   </head>
   <body>
     <h1>Smores Recipe</h1>
+    <img
+      src="../img/smores.jpeg"
+      alt="Chocolate Chip Cookie"
+      width="250"
+      height="250"
+    />
+    <h3>Description</h3>
+    <p>
+      S'mores, a beloved campfire treat, evoke memories of crackling fires under
+      starry skies. Imagine goldeen marshmallows, toasted to perfect, sandwiched
+      between graham crackers and and melted chocolate. Whether your are amping
+      or simply craving nostalgia, s'mores bring bring warmth to both heart and
+      palate.
+    </p>
+    <p>Here’s how you can make them:</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Graham crackers</li>
+      <li>Marshmallows</li>
+      <li>Milk Chocolate bars</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+      <li>Prepare the Marshmallows:</li>
+      <ul>
+        <li>Skewer marshmallows onto sticks or skewers</li>
+        <li>
+          Hold them over an open flame (campfire, stovetop, or girll) until they
+          turn golden brown and slightly crispy on the outside.
+        </li>
+      </ul>
+      <li>Assembly you S'mores:</li>
+      <ul>
+        <li>Break a graham cracker in half to create two squares.</li>
+        <li>Place a piece of milk chocolate on one graham cracker square.</li>
+        <li>Slide the toasted marshmallow onto the chocolate.</li>
+        <li>Top with the other graham cracker square to create a sandwich.</li>
+      </ul>
+      <li>Enjoy!</li>
+      <ul>
+        <li>
+          The heat from the marshmallow will melt the chocolate, creating a
+          gooey, irresistible treat
+        </li>
+        <li>
+          Take a bite and savor the combination of sweet, crunch, and creamy
+          flavors.
+        </li>
+      </ul>
+    </ol>
   </body>
 </html>
