--- a/recipes/chololate-chip-cookies.html
+++ b/recipes/chololate-chip-cookies.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style-choco-cookies.css">
     <title>Chocolate Chip Cookies</title>
   </head>
   <body>
